--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
